Bug #1089315 arm: dts: sprd: Add sdio host controller configuration for sd card
[root cause  ] kernel upgrate
[changes     ] pike2.dtsi & sp7731e-common.dtsi
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:normal work
[reviewers   ] Billows.Wu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Because of kernel upgrate from kernel4.4 to kernel4.14, We need
configure sdio host controller configuration for SD card.

Change-Id: I47e60cd33c8f57b4e7a7a8618e6f5f2151b9b7e0
Signed-off-by: Xuefei Wang <xuefei.wang@unisoc.com>

--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -173,6 +173,18 @@
 					 <&apahb_gate CLK_EMMC_EB>;
 				status = "disabled";
 			};
+
+			sdio0: sdio@20300000 {
+				compatible  = "sprd,sdhc-r10";
+				reg = <0x20300000 0x1000>;
+				interrupts = <GIC_SPI 57 IRQ_TYPE_LEVEL_HIGH>;
+				clock-names = "sdio_clk","sdio_clk_source",
+					      "sdio_ahb_enable";
+				clocks = <&aon_clk CLK_SDIO0_2X>,
+					 <&pll CLK_TWPLL_384M>,
+					 <&apahb_gate CLK_SDIO0_EB>;
+				status = "disabled";
+			};
 		};
 
 		aon {
