--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -3383,8 +3383,8 @@ CONFIG_SPRD_DJTAG=y
 # CONFIG_SPRD_APB_BUSMONITOR is not set
 CONFIG_SPRD_IRQS_MONITOR=y
 # CONFIG_SPRD_LAST_REGS is not set
-# CONFIG_SPRD_DMC_MPU_CORE is not set
-# CONFIG_SPRD_DMC_MPU is not set
+CONFIG_SPRD_DMC_MPU_CORE=y
+CONFIG_SPRD_DMC_MPU=y
 CONFIG_SPRD_SYSDUMP=y
 # CONFIG_SPRD_MINI_SYSDUMP is not set
 CONFIG_SPRD_LOOK_AT=y
