Bug #1052266 arm: configs: Open ADI configuration
[root cause  ] Open ADI configuration
[changes     ] Open ADI configuration
[side effects] Yes
[self test   ]:No
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:Yes
[confirm dependent commit]:Yes
[board]:pike2
[test case]:N/A
[reviewers   ] bruce.chen baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Open ADI module configuration for pike2 platform.

Change-Id: I5382b7942a1fa3dee1f3ac6c2816a9617fea4e60
Signed-off-by: Luting Guo <luting.guo@unisoc.com>

--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -1883,7 +1883,7 @@ CONFIG_SPI_BITBANG=y
 # CONFIG_SPI_ROCKCHIP is not set
 # CONFIG_SPI_SC18IS602 is not set
 # CONFIG_SPI_SPRD is not set
-# CONFIG_SPI_SPRD_ADI is not set
+CONFIG_SPI_SPRD_ADI=y
 # CONFIG_SPI_XCOMM is not set
 # CONFIG_SPI_XILINX is not set
 # CONFIG_SPI_ZYNQMP_GQSPI is not set
