--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -8,6 +8,7 @@
 #include <dt-bindings/soc/sprd,sharkl5pro-regs.h>
 #include <dt-bindings/soc/sprd,sharkl5pro-mask.h>
 #include <dt-bindings/clock/sprd,sharkl5pro-clk.h>
+#include <dt-bindings/debug/dmc_mpu/sharkl5pro_dmc_mpu.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
 / {
@@ -990,6 +991,72 @@
 				#hwlock-cells = <1>;
 				clock-names = "enable";
 				clocks = <&aonapb_gate CLK_SPLK_EB>;
+			};
+		};
+
+		pub {
+			compatible = "simple-bus";
+			#address-cells = <2>;
+			#size-cells = <2>;
+			ranges;
+
+			dmc_mpu: dmc-mpu@31030000 {
+				compatible = "sprd,sharkl5pro-dmc-mpu";
+				reg = <0 0x31030000 0 0x10000>;
+				interrupts = <GIC_SPI 111 IRQ_TYPE_LEVEL_HIGH>;
+				syscon-names = "irq_clr", "irq_en";
+				syscons = <&pub_apb_regs
+					REG_PUB_APB_RF_PUB_INT_CTRL
+					MASK_PUB_APB_RF_DMC_MPU_VIO_INT_CLR>,
+					<&pub_apb_regs
+					REG_PUB_APB_RF_PUB_INT_CTRL
+					MASK_PUB_APB_RF_DMC_MPU_VIO_INT_EN>;
+				sprd,channel-num = <7>;
+				sprd,mpu-num = <16>;
+				sprd,channel-names =
+					"CPU", "GPU", "DPU/DCAM","ISP",
+					"AP/VSP/AON", "WTLCP", "PUBCP/AUDCP",
+					"SHARED0", "SHARED1", "SHARED2",
+					"SHARED3", "SHARED4", "SHARED5",
+					"SHARED6", "SHARED7", "SHARED8";
+				sprd,ranges = <0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+					<0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+					<0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+					<0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+					<0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+					<0 0 0 0>;
+				sprd,chn-config =
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>,
+					<DISABLE MON_INSIDE MON_WRITE>;
+				sprd,id-config =
+					<MPUID 0 0xffff>, <MPUID 0 0xffff>,
+					<MPUID 0 0xffff>, <MPUID 0 0xffff>,
+					<MPUID 0 0xffff>, <MPUID 0 0xffff>,
+					<MPUID 0 0xffff>, <MPUID 0 0xffff>,
+					<MPUID 0 0xffff>, <MPUID 0 0xffff>,
+					<MPUID 0 0xffff>, <MPUID 0 0xffff>,
+					<MPUID 0 0xffff>, <MPUID 0 0xffff>,
+					<MPUID 0 0xffff>, <MPUID 0 0xffff>;
+				sprd,port-map = <0>, <1>, <2>, <3>, <4>,
+						<5>, <6>, <0>, <0>, <0>,
+						<0>, <0>, <0>, <0>, <0>,
+						<0>;
+				sprd,ddr-offset = <0x80000000>;
+				status = "disabled";
 			};
 		};
 	};
