--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -196,6 +196,40 @@
 	};
 };
 
+&dmc_mpu {
+	status = "okay";
+	sprd,channel-names =
+		"CPU", "GPU", "DPU/DCAM","ISP",
+		"AP/VSP/AON", "WTLCP", "PUBCP/AUDCP",
+		"SHARED0", "SHARED1", "SHARED2",
+		"SHARED3", "SHARED4", "SHARED5",
+		"SHARED6", "SHARED7", "SHARED8";
+	sprd,ranges = <0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+		<0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+		<0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+		<0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+		<0 0 0 0>, <0 0 0 0>, <0 0 0 0>,
+		<0 0 0 0>;
+	sprd,chn-config =
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_OUTSIDE MON_WRITE>,
+		<DISABLE MON_OUTSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>,
+		<DISABLE MON_INSIDE MON_WRITE>;
+	sprd,panic;
+};
+
 &uart0 {
 	status = "okay";
 };
