Bug #1089633 arm64: dts: IPA tuning for performance
[root cause  ] update IPA parameters after power optimization.
[changes     ] dts
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:yes
[board]:ums312
[test case]:antutu
[reviewers   ] orson.zhai nianfu.bai
[change_type ] feature_bugfix
[tag_product ] common

tuning IPA parameters for performance after power optimization.

Change-Id: I131f285c9f9c95578374ef04bc981862a4c803a7
Signed-off-by: Jeson Gao <jeson.gao@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/ums312-mach.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums312-mach.dtsi
@@ -96,7 +96,7 @@
 		soc_thmzone: soc-thmzone {
 			polling-delay-passive = <100>;
 			polling-delay = <1000>;
-			sustainable-power = <2000>;
+			sustainable-power = <2386>;
 			thermal-sensors = <&soc_sensor  17>;
 			trips {
 				soc_threshold: trip-point@0 {
@@ -243,7 +243,8 @@
 			/*Pdynperghz*10    Freq     Vbase  */
 			< 757           1000     1000>;
 			sprd,sensor-names = "ank0-thmzone","ank1-thmzone","ank2-thmzone";
-			sprd,cpuidle-temp = <100000 95000 90000>;
+			sprd,cii-per-core-tp = <100000 95000 90000>;
+			sprd,cii-max-tp-core = <90000>;
 		};
 
 		cluster1_cooling: cluster1-cooling {
@@ -286,7 +287,8 @@
 			/* Pdynperghz*10    Freq     Vbase */
 			<  757            1000     1000>;
 			sprd,sensor-names = "prometheus0-thmzone";
-			sprd,cpuidle-temp = <85000>;
+			sprd,cii-per-core-tp = <90000>;
+			sprd,cii-max-tp-core = <90000>;
 		};
 	};
 
