Bug #1089980 arm64: dts: Add the adaptive touchscreen device information for pike2
[root cause  ] Add the adaptive touchscreen device information for pike2.
[changes     ] sp7731e-1h10-overlay.dts
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp7731e-1h10
[test case]:test the touchscreen.
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add the adaptive touchscreen device information for pike2, so
the touchscreen can works normal.

Change-Id: I4066f5b1e16c2c58cd8314093ea35aefd856d596
Signed-off-by: Xingxing Luo <xingxing.luo@unisoc.com>

--- a/arch/arm/boot/dts/sp7731e-1h10-overlay.dts
+++ b/arch/arm/boot/dts/sp7731e-1h10-overlay.dts
@@ -7,6 +7,8 @@
  */
 /dts-v1/;
 /plugin/;
+#include <dt-bindings/input/input.h>
+#include <dt-bindings/gpio/gpio.h>
 
 / {
 	/*
@@ -22,3 +24,20 @@
 	};
 };
 
+&i2c2 {
+	status = "okay";
+	clock-frequency = <400000>;
+	touchscreen@38 {
+		compatible = "adaptive-touchscreen";
+		reg = <0x38>;
+		gpios = <&ap_gpio 63 GPIO_ACTIVE_HIGH
+			&ap_gpio 64 GPIO_ACTIVE_HIGH>;
+		controller = "focaltech,FT5436";
+		virtualkeys = <580 60 1320 60 45
+			172 360 1320 60 45
+			158 600 1320 60 45>;
+		private-data {
+			a8 = /bits/ 8 <0x5A>;
+		};
+	};
+};
