--- a/arch/arm/boot/dts/sp9832e-1h10-gofu-overlay.dts
+++ b/arch/arm/boot/dts/sp9832e-1h10-gofu-overlay.dts
@@ -7,6 +7,8 @@
  */
 /dts-v1/;
 /plugin/;
+#include <dt-bindings/input/input.h>
+#include <dt-bindings/gpio/gpio.h>
 
 / {
 	/*
@@ -14,4 +16,25 @@
 	* otherwise u-boot can not analyze it.
 	*/
 
+};
+
+&i2c3 {
+	status = "okay";
+	clock-frequency = <400000>;
+
+	touchscreen@38 {
+		compatible = "adaptive-touchscreen";
+		reg = <0x38>;
+		gpios = <&ap_gpio 145 GPIO_ACTIVE_HIGH
+			&ap_gpio 144 GPIO_ACTIVE_HIGH>;
+		controller = "focaltech,ft5436";
+		virtualkeys = <580 60 1320 60 45
+				172 360 1320 60 45
+				158 600 1320 60 45>;
+		surface-width = <720>;
+		surface-height = <1280>;
+		private-data {
+			a8 = /bits/ 8 <0x5A>;
+		};
+	};
 };
