Bug #1079954 arm: dts: Add PMIC EIC device nodes for SC2720
[root cause  ] sharkle&pike ugrade to k4.14
[changes     ] Add pmic eic device nodes for SC2720
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: sharkle&pike2
[test case]: compile ok
[reviewers   ] bruce.chen
[change_type ] new feature
[tag_product ] common

Add PMIC EIC device nodes for SC2720

Change-Id: I9ae728fe820083c41cad637e5c4f9f9c488acdbd
Signed-off-by: Taiping Lai <taiping.lai@unisoc.com>

--- a/arch/arm/boot/dts/sc2720.dtsi
+++ b/arch/arm/boot/dts/sc2720.dtsi
@@ -17,6 +17,17 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
+		pmic_eic: gpio-controller@280 {
+			compatible = "sprd,sc27xx-eic", "sprd,sc2720-eic";
+			reg = <0x280>;
+			interrupt-parent = <&sc2720_pmic>;
+			interrupts = <4 IRQ_TYPE_LEVEL_HIGH>;
+			gpio-controller;
+			#gpio-cells = <2>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
+
 		pmic_efuse: efuse@300 {
 			compatible = "sprd,sc27xx-efuse", "sprd,sc2720-efuse", "sprd,sc2731-efuse";
 			reg = <0x300>;
