Bug #1052262 arm: dts: Add uart controller DTS nodes
[root cause  ] Add uart controller DTS clock nodes
[changes     ] Add uart controller DTS clock nodes
[side effects] N/A
[self test   ]:yes
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:No
[confirm dependent commit]:Yes
[board]:sharkle
[test case]:N/A
[reviewers   ] nemo.han baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add uart controller DTS nodes on Spreadtrum sharkle platform.

Change-Id: I8d05d165395c692eb8705b11fb3b90aa5ee8096e
Signed-off-by: Yonghan Ye <yonghan.ye@spreadtrum.com>

--- a/arch/arm/boot/dts/sc9832e.dtsi
+++ b/arch/arm/boot/dts/sc9832e.dtsi
@@ -177,3 +177,9 @@
 		};
 	};
 };
+
+&uart1 {
+	clock-names = "enable", "uart", "source";
+	clocks = <&apapb_gate CLK_UART1_EB>,
+		 <&ap_clk CLK_UART1>, <&ext_26m>;
+};
