--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -1742,7 +1742,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
-# CONFIG_INPUT_SC27XX_VIBRA is not set
+CONFIG_INPUT_SC27XX_VIBRA=y
 # CONFIG_RMI4_CORE is not set
 
 #
