Bug #1052262 arm64: dts: Add missing clocks properties for UART devices
[root cause  ] modify uart controller DTS clock nodes
[changes     ] modify uart controller DTS clock nodes
[side effects] N/A
[self test   ]:yes
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:No
[confirm dependent commit]:Yes
[board]:L5PRO
[test case]:N/A
[reviewers   ] nemo.han ling_ling.xu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add missing clocks properties for UART devices.

Change-Id: Id01490682692996163775979fdecd39c7bb42d80
Signed-off-by: Yonghan Ye <yonghan.ye@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -179,7 +179,8 @@
 				reg = <0 0x70000000 0 0x100>;
 				interrupts = <GIC_SPI 2 IRQ_TYPE_LEVEL_HIGH>;
 				clock-names = "enable", "uart", "source";
-				clocks = <&apapb_gate CLK_UART0_EB>;
+				clocks = <&apapb_gate CLK_UART0_EB>,
+					<&ap_clk CLK_AP_UART0>, <&ext_26m>;
 				status = "disabled";
 			};
 
@@ -189,7 +190,8 @@
 				reg = <0 0x70100000 0 0x100>;
 				interrupts = <GIC_SPI 3 IRQ_TYPE_LEVEL_HIGH>;
 				clock-names = "enable", "uart", "source";
-				clocks = <&apapb_gate CLK_UART1_EB>;
+				clocks = <&apapb_gate CLK_UART1_EB>,
+					<&ap_clk CLK_AP_UART1>, <&ext_26m>;
 				status = "disabled";
 			};
 
