Bug #890695 arm: dts: Add hwspinlock clock for sharkle
[root cause  ] Add hwspinlock clock for sharkle
[changes     ] enable hwspinlock
[side effects]none
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:yes
[confirm dependent commit]:yes
[board]:9832e
[test case]:build ok
[reviewers   ] qingqing.wang
[change_type ] feature_bugfix
[tag_product ] common

Add hwspinlock clock for sharkle.

Change-Id: I42d7f1c43addd581e5b32893e2f59bc198e12320
Signed-off-by: Laura Yu <laura.yu@unisoc.com>

--- a/arch/arm/boot/dts/sharkle.dtsi
+++ b/arch/arm/boot/dts/sharkle.dtsi
@@ -159,6 +159,8 @@
 				compatible = "sprd,hwspinlock-r3p0";
 				reg = <0x33000000 0x10000>;
 				#hwlock-cells = <1>;
+				clock-names = "enable";
+				clocks = <&aonapb_gate CLK_SPLK_EB>;
 			};
 
 			eic_debounce: gpio@40210000 {
