--- a/drivers/soc/sprd/domain/Kconfig
+++ b/drivers/soc/sprd/domain/Kconfig
@@ -7,11 +7,18 @@ config DISP_PM_DOMAIN_SHARKL3
 
 config SPRD_MM_PW_DOMAIN_R6P0
 	bool "Unisoc MM System Power Domain r6p0"
+	select PM_GENERIC_DOMAINS if PM
 	help
 	  This is a power domain driver for mm sys.
 
 config SPRD_CAM_PW_DOMAIN_R5P0
 	bool "SPRD Cam System Power Domain r5p0"
+	select PM_GENERIC_DOMAINS if PM
 	help
 	  This is a power domain driver for cam sys.
 
+config SPRD_CAM_PW_DOMAIN_R7P0
+	bool "SPRD Cam System Power Domain r7p0"
+	select PM_GENERIC_DOMAINS if PM
+	help
+	  This is a power domain driver for cam sys.
