--- a/arch/arm64/boot/dts/sprd/ums512.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512.dtsi
@@ -384,23 +384,26 @@
 };
 
 &sdio0 {
-	clock-names = "sdio_clk_source", "sdio_ahb_enable";
-	clocks = <&ext_26m>, <&apapb_gate 22>;
+	clock-names = "sdio_clk", "sdio_clk_source",
+		      "sdio_ahb_enable", "sdio_hp_det_clk";
+	clocks = <&ap_clk CLK_SDIO0_2X>,
+		 <&pll1 CLK_RPLL>,
+		 <&apapb_gate CLK_SDIO0_EB>,
+		 <&apapb_gate CLK_SDIO0_32K_EB>;
 };
 
 &sdio1 {
-	clock-names = "sdio_clk_source", "sdio_ahb_enable";
-	clocks = <&ext_26m>, <&apapb_gate 23>;
-};
-
-&sdio2 {
-	clock-names = "sdio_clk_source", "sdio_ahb_enable";
-	clocks = <&ext_26m>, <&apapb_gate 24>;
+	clock-names = "sdio_clk","sdio_clk_source","sdio_ahb_enable";
+	clocks = <&ap_clk CLK_SDIO1_2X>,
+		 <&pll2 CLK_LPLL_409M6>,
+		 <&apapb_gate CLK_SDIO1_EB>;
 };
 
 &sdio3 {
-	clock-names = "sdio_clk_source", "sdio_ahb_enable";
-	clocks = <&ext_26m>, <&apapb_gate 25>;
+	clock-names = "sdio_clk","sdio_clk_source","sdio_ahb_enable";
+	clocks = <&ap_clk CLK_EMMC_2X>,
+		 <&pll1 CLK_RPLL>,
+		 <&apapb_gate CLK_EMMC_EB>;
 };
 
 &i2c0 {
