Bug #1052268 arm64: dts: Add pin controller DTS nodes
[root cause  ] Add pin controller DTS nodes
[changes     ] Add pin controller DTS nodes
[side effects] No
[self test   ]:Yes
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:Yes
[confirm dependent commit]:Yes
[board]:sharkl5pro
[test case]:N/A
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add pin controller DTS nodes for Spreadtrum Sharkl5pro platform.

Change-Id: Icd413e94c8c92a81896c600682175432e5fe4f81
Signed-off-by: Bruce Chen <bruce.chen@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -993,6 +993,11 @@
 					<&aonapb_gate CLK_AC_WDG_RTC_EB>;
 			};
 
+			pin_controller: pinctrl@32450000 {
+				compatible = "sprd,sharkl5Pro-pinctrl";
+				reg = <0 0x32450000 0 0x10000>;
+			};
+
 			djtag: djtag@324e0000 {
 				compatible = "sprd,djtag";
 				reg = <0 0x324e0000 0 0x1000>;
