--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -193,6 +193,28 @@
 		tuning-latency-us = <300>;
 		chnl-in-i2c = <1>;
 	};
+
+	tboard_thermistor:thermal-sensor {
+		compatible = "generic-adc-thermal";
+		#thermal-sensor-cells = <0>;
+		io-channels = <&pmic_adc 1>;
+		io-channel-names = "sensor-channel";
+		temperature-lookup-table = <	(-39742) 1131
+						(-29777) 1110
+						(-19480) 1074
+						(-4679) 983
+						10110 838
+						24805 654
+						44922 413
+						54903 316
+						64895 238
+						74884 178
+						84883 133
+						94883 100
+						104880 75
+						114889 57
+						124872 43 >;
+	};
 };
 
 &reserved_memory {
@@ -203,6 +225,14 @@
 
 	wb_reserved: writeback-mem {
 		reg = <0x0 0xff562000 0x0 0x00a1e000>;
+	};
+};
+
+&thm_zone {
+	bd_thmzone: board-thmzone {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-sensors = <&tboard_thermistor>;
 	};
 };
 
