--- a/arch/arm64/boot/dts/sprd/ums512-mach.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512-mach.dtsi
@@ -168,6 +168,18 @@
 			polling-delay = <0>;
 			thermal-sensors = <&ap_thm2 0>;
 		};
+
+		osctsen_thmzone: osctsen-thmzone {
+			polling-delay-passive = <0>;
+			polling-delay = <0>;
+			thermal-sensors = <&pmic_tsensor 0>;
+		};
+
+		outtsen_thmzone: outtsen-thmzone {
+			polling-delay-passive = <0>;
+			polling-delay = <0>;
+			thermal-sensors = <&pmic_tsensor 1>;
+		};
 	};
 };
 
