--- a/arch/arm64/boot/dts/sprd/sp9863a-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/sp9863a-1h10.dts
@@ -69,7 +69,7 @@
 
 	sprd-sysdump {
 		memory-region = <&memory>;
-		memory-region-re = <&cp_reserved>, <&smem_reserved>,
+		memory-region-re = <&cp_reserved>, <&scproc_pubpm>, <&smem_reserved>,
 				<&gnss_reserved>, <&wcn_reserved>;
 		memory-region-se = <&tos_reserved>, <&sml_reserved>;
 	};
