Bug #1052260  arm64: dts: Add the sharkl5pro busmonitor configuration.
[root cause  ] Add the sharkl5pro busmonitor configuration
[changes     ] sharkl5pro.dtsi
[side effects] no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: no
[is there dependence]: no
[confirm dependent commit]: no
[board]: sharkl5pro
[test case]: test pass
[reviewers   ] ling_ling.xu
[change_type ] feature
[tag_product ] common

Add the busmonitor  configuration for the Sharkl5pro platform.

Change-Id: Ib29893bf3b4aeceac22deb11d94477b31d0c0251
Signed-off-by: Yongzhi Chen <yongzhi.chen@spreadtrum.com>

--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -10,6 +10,7 @@
 #include <dt-bindings/clock/sprd,sharkl5pro-clk.h>
 #include <dt-bindings/debug/dmc_mpu/sharkl5pro_dmc_mpu.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
+#include <dt-bindings/debug/busmonitor/busmonitor.h>
 
 / {
 	interrupt-parent = <&gic>;
@@ -1006,6 +1007,43 @@
 
 				#address-cells = <1>;
 				#size-cells = <0>;
+
+				aon-busmonitor@8{
+					compatible = "sprd,sharkl5pro-busmonitor";
+					interrupts = <GIC_SPI 81
+						IRQ_TYPE_LEVEL_HIGH>;
+					reg = <0x8>;
+					sprd,bm-num = <6>;
+					sprd,bm-name =
+						"AP", "WTLCP", "AUDCP", "PUBCP",
+						"USBOTG", "CM4";
+					sprd,bm-type =
+						<AXI>, <AXI>, <AXI>,
+						<AXI>, <AXI>, <AXI>;
+					sprd,bm-dap = <0>, <1>, <2>, <3>,
+						<4>, <5>;
+					sprd,bm-config =
+						<DISABLE MON_WRITE MON_INSIDE>,
+						<DISABLE MON_WRITE MON_INSIDE>,
+						<DISABLE MON_WRITE MON_INSIDE>,
+						<DISABLE MON_WRITE MON_INSIDE>,
+						<DISABLE MON_WRITE MON_INSIDE>,
+						<DISABLE MON_WRITE MON_INSIDE>;
+					sprd,bm-id =
+						<DISABLE 0 AXIID>,
+						<DISABLE 0 AXIID>,
+						<DISABLE 0 AXIID>,
+						<DISABLE 0 AXIID>,
+						<DISABLE 0 AXIID>,
+						<DISABLE 0 AXIID>;
+					sprd,bm-ranges =
+						<0 0>,
+						<0 0>,
+						<0 0>,
+						<0 0>,
+						<0 0>,
+						<0 0>;
+				};
 			};
 
 			hwlock: hwspinlock@327f0000 {
