--- a/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
@@ -11,8 +11,37 @@
 			sprd-wlan {
 				compatible = "sprd,sc2355-wifi";
 			};
+
+			gpio-keys {
+				compatible = "gpio-keys";
+
+				key-volumedown {
+					label = "Volume Down Key";
+					linux,code = <KEY_VOLUMEDOWN>;
+					gpios = <&ap_gpio 124 GPIO_ACTIVE_LOW>;
+					debounce-interval = <2>;
+					wakeup-source;
+				};
+
+				key-volumeup {
+					label = "Volume Up Key";
+					linux,code = <KEY_VOLUMEUP>;
+					gpios = <&pmic_eic 4 GPIO_ACTIVE_HIGH>;
+					debounce-interval = <2>;
+					wakeup-source;
+				};
+
+				key-power {
+					label = "Power Key";
+					linux,code = <KEY_POWER>;
+					gpios = <&pmic_eic 1 GPIO_ACTIVE_LOW>;
+					debounce-interval = <2>;
+					wakeup-source;
+				};
+			};
 		};
 	};
+
 	dtbo: dtbo {
 		compatible = "sprd,dtbo-test";
 		reg = <0x11>;
