Bug #1087041 arm64: dts: add wifi dts config for sharkl5pro
[root cause  ] add wifi dts for ums512
[changes     ] ums512-1h10-overlay.dts
[side effects] none
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:none
[confirm dependent commit]:none
[board]:ums512-1h10
[test case]:none
[change_type ] bringup --> sprd_chip_support
[tag_product ] common
Test: wifi test.
[reviewers   ] baolei.yuan, jessie.xin

Change-Id: I18bb1b6d8a91fda7041fb74e84653e6682f063d7
Signed-off-by: jin.shi <jin.shi@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
@@ -5,6 +5,14 @@
 #include <dt-bindings/gpio/gpio.h>
 
 / {
+	fragment {
+		target-path = "/";
+		__overlay__ {
+			sprd-wlan {
+				compatible = "sprd,sc2355-wifi";
+			};
+		};
+	};
 	dtbo: dtbo {
 		compatible = "sprd,dtbo-test";
 		reg = <0x11>;
