Bug #1089568 arm: boot: dts: Add emmc host controller node  for kernel upgrate
[root cause  ] kernel upgrate from kernel4.4 to kernel4.14
[changes     ] sharkle.dtsi,sp9832e-go-mach.dtsi
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:no
[board]:sharkle
[test case]:normal test
[reviewers   ] Billows.Wu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add emmc host controller nodes in dts file for kernel upgrate.

Change-Id: I0830482cfc8770a3ec6a895387c7cf2f8dedeb81
Signed-off-by: Xuefei Wang <xuefei.wang@unisoc.com>

--- a/arch/arm/boot/dts/sharkle.dtsi
+++ b/arch/arm/boot/dts/sharkle.dtsi
@@ -147,6 +147,18 @@
 				interrupts = <GIC_SPI 3 IRQ_TYPE_LEVEL_HIGH>;
 				status = "disabled";
 			};
+
+			sdio3: sdio@20600000 {
+				compatible  = "sprd,sdhc-r10";
+				reg = <0x20600000 0x1000>;
+				interrupts = <GIC_SPI 60 IRQ_TYPE_LEVEL_HIGH>;
+				clock-names = "sdio_clk","sdio_clk_source",
+					"sdio_ahb_enable";
+				clocks = <&ap_clk CLK_EMMC_2X >,
+					 <&rpll CLK_RPLL_390M>,
+					 <&apahb_gate EMMC_EB>;
+				status = "disabled";
+			};
 		};
 
 		ap-ahb {
