Bug #1082558 misc: sprd_camera: for fix updating error
[root cause  ] add new file cause updating error
[changes     ] kernel4.14/driver/misc
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:ums518
[test case]:compile
[reviewers   ] qin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

For fix updating error.

Change-Id: I795a0296a185be25905d8a3ace0815f3f12deae0
Signed-off-by: Xiaobo Liu <xiaobo.liu@spreadtrum.com>

--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -3248,6 +3248,7 @@ CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # CONFIG_DISP_PM_DOMAIN_SHARKL3 is not set
 # CONFIG_SPRD_MM_PW_DOMAIN_R6P0 is not set
 # CONFIG_SPRD_CAM_PW_DOMAIN_R5P0 is not set
+# CONFIG_SPRD_CAM_PW_DOMAIN_R7P0 is not set
 # CONFIG_SPRD_AUTOTEST_GPIO is not set
 # CONFIG_SPRD_AUTOTEST_PINCTRL is not set
 # CONFIG_SPRD_AUTOTEST_OTG is not set
