--- a/arch/arm64/configs/sprd_sharkl3_defconfig
+++ b/arch/arm64/configs/sprd_sharkl3_defconfig
@@ -3484,6 +3484,7 @@ CONFIG_SPRD_IQ=y
 CONFIG_DISP_PM_DOMAIN_SHARKL3=y
 # CONFIG_SPRD_MM_PW_DOMAIN_R6P0 is not set
 CONFIG_SPRD_CAM_PW_DOMAIN_R5P0=y
+# CONFIG_SPRD_CAM_PW_DOMAIN_R7P0 is not set
 CONFIG_SPRD_AUTOTEST=y
 CONFIG_SPRD_AUTOTEST_GPIO=y
 CONFIG_SPRD_AUTOTEST_PINCTRL=y
