--- a/arch/arm64/configs/sprd_minimum_defconfig
+++ b/arch/arm64/configs/sprd_minimum_defconfig
@@ -1611,6 +1611,7 @@ CONFIG_CLKSRC_VERSATILE=y
 # CONFIG_DISP_PM_DOMAIN_SHARKL3 is not set
 # CONFIG_SPRD_MM_PW_DOMAIN_R6P0 is not set
 # CONFIG_SPRD_CAM_PW_DOMAIN_R5P0 is not set
+# CONFIG_SPRD_CAM_PW_DOMAIN_R7P0 is not set
 CONFIG_SPRD_AUTOTEST=y
 # CONFIG_SPRD_AUTOTEST_GPIO is not set
 CONFIG_SPRD_AUTOTEST_PINCTRL=y
