--- a/arch/arm64/configs/sprd_roc1_defconfig
+++ b/arch/arm64/configs/sprd_roc1_defconfig
@@ -620,7 +620,10 @@ CONFIG_PM_SLEEP_DEBUG=y
 # CONFIG_DPM_WATCHDOG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
+CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
+CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -3721,6 +3724,7 @@ CONFIG_SPRD_IQ=y
 # CONFIG_DISP_PM_DOMAIN_SHARKL3 is not set
 CONFIG_SPRD_MM_PW_DOMAIN_R6P0=y
 # CONFIG_SPRD_CAM_PW_DOMAIN_R5P0 is not set
+# CONFIG_SPRD_CAM_PW_DOMAIN_R7P0 is not set
 CONFIG_SPRD_AUTOTEST=y
 CONFIG_SPRD_AUTOTEST_GPIO=y
 CONFIG_SPRD_AUTOTEST_PINCTRL=y
