Bug #1069126 arm: configs: Add board thermal config
[root cause  ] project need
[changes     ] modify config
[side effects] no
[self test   ]: build ok
[download normally]: ok
[power on/off normally]: ok
[do common repository/branch inspection]: no
[is there dependence]: no
[confirm dependent commit]: no
[board]: sp7731e
[test case]: build ok
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add board thermal config for pike2.

Change-Id: Iaeaec1ff214c572522fb1d3d18fef18c41492e21
Signed-off-by: Freeman Liu <freeman.liu@spreadtrum.com>

--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -2053,7 +2053,7 @@ CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 #
 # ACPI INT340X thermal drivers
 #
-# CONFIG_GENERIC_ADC_THERMAL is not set
+CONFIG_GENERIC_ADC_THERMAL=y
 # CONFIG_SPRD_THERMAL is not set
 CONFIG_SPRD_DEDICATE_THERMAL=y
 # CONFIG_SPRD_CPU_COOLING is not set
