--- a/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
+++ b/arch/arm64/boot/dts/sprd/sharkl5Pro.dtsi
@@ -993,6 +993,14 @@
 					<&aonapb_gate CLK_AC_WDG_RTC_EB>;
 			};
 
+			hsphy: hsphy@323b0000 {
+				compatible = "sprd,sharkl5-phy", "sprd,sharkl5pro-phy";
+				sprd,syscon-enable = <&aon_apb_regs>;
+				sprd,syscon-anag2 = <&anlg_phy_g2_regs>;
+				sprd,vdd-voltage = <3300000>;
+				#phy-cells = <0>;
+			};
+
 			pin_controller: pinctrl@32450000 {
 				compatible = "sprd,sharkl5Pro-pinctrl";
 				reg = <0 0x32450000 0 0x10000>;
@@ -1057,6 +1065,19 @@
 				#hwlock-cells = <1>;
 				clock-names = "enable";
 				clocks = <&aonapb_gate CLK_SPLK_EB>;
+			};
+
+			usb: usb@5fff0000 {
+				compatible = "sprd,sharkl5-musb", "sprd,sharkl5pro-musb";
+				reg = <0 0x5fff0000 0 0x2000>;
+				interrupts = <GIC_SPI 69 IRQ_TYPE_LEVEL_HIGH>;
+				interrupt-names = "mc";
+				clocks = <&aonapb_gate CLK_OTG_UTMI_EB>;
+				clock-names = "core_clk";
+				usb-phy = <&hsphy>;
+				phy-names = "usb";
+				dr-mode = "peripheral";
+				wakeup-source;
 			};
 		};
 
