Bug #890695 arm: configs: Open hardware spinlock for Sharkle and Pike2 platform
[root cause  ] Add HWSPINLOCK_SPRD in sharkle and pike2 defconfig
[changes     ] modify deconfig
[side effects]none
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:yes
[confirm dependent commit]:yes
[board]:sharkle\pike2
[test case]:build ok
[reviewers   ] lanqing.liu
[change_type ] feature_bugfix
[tag_product ] common

Some modules depend on hwspinlock, so we need to add HWSPINLOCK_SPRD 
in sharkle and pike2 defconfig.

Change-Id: I53433a0e380b2810df238e878df03fb949837e20
Signed-off-by: Laura Yu <laura.yu@unisoc.com>

--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -3180,7 +3180,7 @@ CONFIG_SPRD_COMMON_CLK=y
 CONFIG_SPRD_SC7731E_CLK=y
 # CONFIG_SPRD_SHARKL5_CLK is not set
 CONFIG_HWSPINLOCK=y
-# CONFIG_HWSPINLOCK_SPRD is not set
+CONFIG_HWSPINLOCK_SPRD=y
 
 #
 # Clock Source drivers
