--- a/arch/arm/configs/sprd_sharkle_defconfig
+++ b/arch/arm/configs/sprd_sharkle_defconfig
@@ -3179,7 +3179,7 @@ CONFIG_COMMON_CLK=y
 # CONFIG_COMMON_CLK_VC5 is not set
 # CONFIG_SPRD_COMMON_CLK is not set
 CONFIG_HWSPINLOCK=y
-# CONFIG_HWSPINLOCK_SPRD is not set
+CONFIG_HWSPINLOCK_SPRD=y
 
 #
 # Clock Source drivers
